--- a/l10n_ve_withholding_iva/views/account_move_views.xml
+++ b/l10n_ve_withholding_iva/views/account_move_views.xml
@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <odoo>
+    <!-- account.move form view -->
     <record id="view_move_form" model="ir.ui.view">
         <field name="name">account.move.form</field>
         <field name="model">account.move</field>
@@ -9,7 +10,7 @@
                 <field name="withholding_iva_id" invisible="1" />
                 <button
                     name="button_open_withholding_iva"
-                    string="RET. IVA"
+                    string="VAT RET."
                     class="oe_stat_button"
                     icon="fa-bars"
                     type="object"
