--- a/l10n_ve_withholding_iva/views/account_withholding_iva.xml
+++ b/l10n_ve_withholding_iva/views/account_withholding_iva.xml
@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <odoo>
+    <!-- account.withholding.iva tree view -->
     <record id="account_withholding_iva_view_tree" model="ir.ui.view">
         <field name="name">account.withholding.iva.view.tree</field>
         <field name="model">account.withholding.iva</field>
@@ -18,6 +19,8 @@
             </tree>
         </field>
     </record>
+
+    <!-- account.withholding.iva form view -->
     <record id="account_withholding_iva_view_form" model="ir.ui.view">
         <field name="name">account.withholding.iva.view.form</field>
         <field name="model">account.withholding.iva</field>
@@ -29,24 +32,24 @@
                         states="draft"
                         type="object"
                         class="oe_highlight"
-                        string="Confirmar"
+                        string="Confirm"
                     />
                     <button
                         name="button_send_mail"
                         states="posted"
                         type="object"
-                        string="Enviar por correo electrónico"
+                        string="Send by email"
                     />
                     <button
                         name="button_draft"
                         type="object"
-                        string="Restablecer a borrador"
+                        string="Reset to draft"
                         attrs="{'invisible': ['|', ('state', '!=', 'posted'), ('txt_state', '=', 'posted')]}"
                     />
                     <button
                         name="button_cancel"
                         type="object"
-                        string="Cancelar"
+                        string="Cancel"
                         attrs="{'invisible': ['|', ('state', 'not in', ('draft', 'posted')), ('txt_state', '=', 'posted')]}"
                     />
                     <field
@@ -66,14 +69,14 @@
                             attrs="{'invisible': ['|', ('state', '!=', 'posted'), ('move_id', '=', False)]}"
                         >
                             <div class="o_stat_info">
-                                <span class="o_stat_text">Asiento</span>
+                                <span class="o_stat_text">Entry</span>
                             </div>
                         </button>
                     </div>
                     <field name="txt_state" invisible="1" />
                     <widget
                         name="web_ribbon"
-                        title="Declarado"
+                        title="Declared"
                         attrs="{'invisible': [('txt_state', '!=', 'posted')]}"
                     />
                     <div class="oe_title">
@@ -102,13 +105,13 @@
                             <field name="journal_id" />
                             <field
                                 name="company_id"
-                                string="Compañía"
+                                string="Company"
                                 groups="base.group_no_one"
                             />
                         </group>
                     </group>
                     <notebook>
-                        <page string="Lineas">
+                        <page string="Lines">
                             <field name="line_ids">
                                 <tree>
                                     <field name="currency_id" invisible="1" />
@@ -132,25 +135,33 @@
             </form>
         </field>
     </record>
+
+    <!-- account.withholding.iva Customers actions window -->
     <record id="account_withholding_iva_customer_action" model="ir.actions.act_window">
-        <field name="name">Retención de IVA Clientes</field>
+        <field name="name">VAT Withholding for Customers</field>
         <field name="res_model">account.withholding.iva</field>
         <field name="view_mode">tree,form</field>
         <field name="domain">[('type', '=', 'customer')]</field>
         <field name="context">{'default_type': 'customer'}</field>
     </record>
+
+    <!-- account.withholding.iva Providers actions window -->
     <record id="account_withholding_iva_supplier_action" model="ir.actions.act_window">
-        <field name="name">Retención de IVA Proveedores</field>
+        <field name="name">VAT Withholding for Providers</field>
         <field name="res_model">account.withholding.iva</field>
         <field name="view_mode">tree,form</field>
         <field name="domain">[('type', '=', 'supplier')]</field>
         <field name="context">{'default_type': 'supplier'}</field>
     </record>
+
+    <!-- account.withholding.iva Customers menu item -->
     <menuitem
         id="menu_account_withholding_iva_customer"
         action="account_withholding_iva_customer_action"
         parent="account.menu_finance_receivables"
     />
+
+    <!-- account.withholding.iva Providers menu item -->
     <menuitem
         id="menu_account_withholding_iva_supplier"
         action="account_withholding_iva_supplier_action"
