--- a/l10n_ve_withholding_iva/views/withholding_iva_rate_views.xml
+++ b/l10n_ve_withholding_iva/views/withholding_iva_rate_views.xml
@@ -7,12 +7,12 @@
             <tree editable="top">
                 <field name="name" />
                 <field name="description" />
-                <field name="create_date" string="Fecha de creación" readonly="1" />
+                <field name="create_date" string="Creation date" readonly="1" />
             </tree>
         </field>
     </record>
     <record id="action_withholding_iva_rate" model="ir.actions.act_window">
-        <field name="name">Tasas de retención de IVA</field>
+        <field name="name">VAT withholding rates</field>
         <field name="res_model">withholding.iva.rate</field>
         <field name="view_mode">tree</field>
         <field name="view_id" ref="withholding_iva_rate_view_tree" />
