--- a/l10n_ve_withholding_municipal/views/account_withholding_municipal.xml
+++ b/l10n_ve_withholding_municipal/views/account_withholding_municipal.xml
@@ -29,25 +29,25 @@
                         states="draft"
                         type="object"
                         class="oe_highlight"
-                        string="Confirmar"
+                        string="Confirm"
                     />
                     <button
                         name="button_send_mail"
                         states="posted"
                         type="object"
-                        string="Enviar por correo electrónico"
+                        string="Send by email"
                     />
                     <button
                         name="button_draft"
                         states="posted"
                         type="object"
-                        string="Restablecer a borrador"
+                        string="Reset to draft"
                     />
                     <button
                         name="button_cancel"
                         states="draft,posted"
                         type="object"
-                        string="Cancelar"
+                        string="Cancel"
                     />
                     <field
                         name="state"
@@ -66,7 +66,7 @@
                             attrs="{'invisible': ['|', ('state', '!=', 'posted'), ('move_id', '=', False)]}"
                         >
                             <div class="o_stat_info">
-                                <span class="o_stat_text">Asiento</span>
+                                <span class="o_stat_text">Entry</span>
                             </div>
                         </button>
                     </div>
@@ -97,7 +97,7 @@
                         </group>
                     </group>
                     <notebook>
-                        <page string="Lineas">
+                        <page string="Lines">
                             <field name="line_ids">
                                 <tree no_open="1">
                                     <field name="currency_id" invisible="1" />
@@ -124,7 +124,7 @@
         id="account_withholding_municipal_customer_action"
         model="ir.actions.act_window"
     >
-        <field name="name">Retención municipal Clientes</field>
+        <field name="name">Municipal clients Retention</field>
         <field name="res_model">account.withholding.municipal</field>
         <field name="view_mode">tree,form</field>
         <field name="domain">[('type', '=', 'customer')]</field>
@@ -134,7 +134,7 @@
         id="account_withholding_municipal_supplier_action"
         model="ir.actions.act_window"
     >
-        <field name="name">Retención municipal Proveedores</field>
+        <field name="name">Municipal Withholding Providers</field>
         <field name="res_model">account.withholding.municipal</field>
         <field name="view_mode">tree,form</field>
         <field name="domain">[('type', '=', 'supplier')]</field>
