--- a/l10n_ve_withholding_tax_liquor/views/account_liquor_tax_report_views.xml
+++ b/l10n_ve_withholding_tax_liquor/views/account_liquor_tax_report_views.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
+    <!-- account.liquor.tax.report tree view -->
     <record id="account_liquor_tax_report_view_tree" model="ir.ui.view">
         <field name="name">account.liquor.tax.report.view.tree</field>
         <field name="model">account.liquor.tax.report</field>
@@ -14,6 +15,8 @@
             </tree>
         </field>
     </record>
+
+    <!-- account.liquor.tax.report form view -->
     <record id="account_liquor_tax_report_view_form" model="ir.ui.view">
         <field name="name">account.liquor.tax.report.view.form</field>
         <field name="model">account.liquor.tax.report</field>
@@ -23,24 +26,24 @@
                     <button
                         name="seek_for_lines"
                         states="draft"
-                        string="Generar lineas"
+                        string="Generate lines"
                         type="object"
                     />
                     <button
                         name="button_draft"
                         states="confirmed,paid"
-                        string="Restablecer a borrador"
+                        string="Reset to draft"
                         type="object"
                     />
                     <button
                         name="button_confirm"
-                        string="Confirmar"
+                        string="Confirm"
                         type="object"
                         attrs="{'invisible': ['|', ('line_ids', '=', []), ('state', '!=', 'draft')]}"
                     />
                     <button
                         name="button_pay"
-                        string="Pagar"
+                        string="Pay"
                         type="object"
                         attrs="{'invisible': ['|', ('line_ids', '=', []), ('state', '!=', 'confirmed')]}"
                     />
@@ -50,7 +53,7 @@
                     <div class="oe_title">
                         <h1 class="mt0"><field
                                 name="name"
-                                placeholder="Descripción"
+                                placeholder="Description"
                             /></h1>
                     </div>
                     <group col="4">
@@ -58,7 +61,7 @@
                         <field name="date_to" />
                     </group>
                     <notebook>
-                        <page name="lines" string="Lineas">
+                        <page name="lines" string="Lines">
                             <field name="line_ids" nolabel="1">
                                 <tree>
                                     <field name="report_id" invisible="1" />
@@ -81,11 +84,15 @@
             </form>
         </field>
     </record>
+
+    <!-- account.liquor.tax.report actions window -->
     <record id="account_liquor_tax_report_action" model="ir.actions.act_window">
-        <field name="name">Reporte impuestos por venta de licor</field>
+        <field name="name">Report taxes on liquor sales</field>
         <field name="res_model">account.liquor.tax.report</field>
         <field name="view_mode">tree,form</field>
     </record>
+
+    <!-- account.liquor.tax.report menu item -->
     <menuitem
         id="menu_account_liquor_tax_report"
         parent="l10n_ve_config_account.menu_l10n_ve_reports"
