[ADD] Added more improvements about the i18n support for the l10n_ve_withholding_municipal module

--- a/l10n_ve_withholding_municipal/report/account_withholding_municipal_report.xml
+++ b/l10n_ve_withholding_municipal/report/account_withholding_municipal_report.xml
@@ -57,11 +57,12 @@
                                     /></td>
                             </tr>
                             <tr>
-                                <td
-                                    colspan="3"
-                                >Tax Address of the Withholding Agent<br /><span
+                                <td colspan="3">
+                                    Tax Address of the Withholding Agent<br />
+                                    <span
                                         t-esc="doc.agent_id._display_address(without_company=True)"
-                                    /></td>
+                                    />
+                                </td>
                             </tr>
                             <t t-if="doc.company_id.partner_id == doc.agent_id">
                                 <td colspan="2">License for economic activities<br
