[ADD] Added more improvements about the i18n support for the l10n_ve_withholding_iva module

--- a/l10n_ve_withholding_iva/report/account_withholding_iva_report.xml
+++ b/l10n_ve_withholding_iva/report/account_withholding_iva_report.xml
@@ -57,10 +57,12 @@
                                     /></td>
                             </tr>
                             <tr>
-                                <td colspan="3">Tax Address of the Withholding Agent:<br
-                                    /><span
+                                <td colspan="3">
+                                    Tax Address of the Withholding Agent:<br />
+                                    <span
                                         t-esc="doc.agent_id._display_address(without_company=True)"
-                                    /></td>
+                                    />
+                                </td>
                             </tr>
                             <tr>
                                 <td
